...
  Widget build(BuildContext context) {

  TextEditingController nameController = TextEditingController();
  TextEditingController descriptionController = TextEditingController();

  final nameField = TextFormField(
    key: Key("name"),
    controller: nameController,
    keyboardType: TextInputType.text,
    decoration: InputDecoration (
      hintText: "Please enter item name"
    ),
    validator: (text) {
...
      }
      return null;
    },
  );

  final descriptionField = TextFormField(
    key: Key("desc"),
    controller: descriptionController,
    keyboardType: TextInputType.multiline,
    maxLines: 4,
    decoration: InputDecoration (
      hintText: "Please enter item description",
    ),
...
