...
                                title: Text(item!.name),
                                subtitle: Text(item.description),
                                trailing: Row(          
                                  mainAxisSize: MainAxisSize.min,
                                  children: <Widget>[
                                  IconButton(
                                    key: Key("edit"),
                                    icon: const Icon(Icons.edit),
                                    tooltip: 'Edit Item',
                                    onPressed: () => showDialog<Item>(
                                      context: context,
                                      builder: (BuildContext context) => Dialog.fullscreen(
                                        child: EditItemPage(_backend, _client, item.id),
...
                                      if (updatedItem != null) {
                                        setState((){});
                                      }
                                      }),
                                  ),
                                  IconButton(
                                    key: Key("delete"),
                                    icon: const Icon(Icons.delete),
                                    tooltip: 'Delete Item',
                                    onPressed: () {
                                      _backend.deleteItem(_client, item.id).then((_) => setState(() {
                                        
                                      }));
...
